--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ php:
   # using major version aliases
 
   # aliased to a recent 5.5.x version
-  - 5.5
+  # - 5.5
   # aliased to a recent 5.6.x version
-  - 5.6
+  # - 5.6
   # aliased to a recent 7.x version
   - 7.0
   # aliased to a recent hhvm version
-  - hhvm
+  # - hhvm
 
 # optionally specify a list of environments, for example to test different RDBMS
 env:
