--- a/.htaccess
+++ b/.htaccess
@@ -15,6 +15,11 @@
 RewriteEngine On
 
 #===============================================================================
+# Define RewriteBase
+#===============================================================================
+RewriteBase /
+
+#===============================================================================
 # ErrorDocument handler
 #===============================================================================
 ErrorDocument 403 /system/403.php
