Several changes have been made in this commit, which together with the previous commits result in version 1.1: + The rules for the Apache and nginx configuration have been changed and redirects now all requests to the index.php. + A router class has been added which now handles all requests that arrives at the application on the index.php. + Short-hand functions "PAGE", "POST" and "USER" for use in templates added to get specific item data by ID. + More language variables have been added to the core language.

--- a/.htaccess
+++ b/.htaccess
@@ -23,19 +23,12 @@ ErrorDocument 404 /system/404.php
 #===============================================================================
 # Forbidden directories
 #===============================================================================
-RewriteRule ^core|template/(.*)/(html|lang)/ - [F]
+RewriteRule ^(core|template/([^/]+)/(html|lang)/) - [F]
 
 #===============================================================================
 # Main rules
 #===============================================================================
-RewriteRule ^(page|post|user)/([^/]+)/$ system/$1/main.php?param=$2 [L]
-RewriteRule ^(page|post|user)/$ system/$1/list.php [L]
-RewriteRule ^feed/(page|post)/$ system/feed/main.php?item=$1 [L]
-RewriteRule ^(feed|search)/$ system/$1/main.php [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 
-#===============================================================================
-# Trailing slashes
-#===============================================================================
-RewriteRule ^(page|post|user)/([^/]+)$ %{REQUEST_URI}/ [R,L]
-RewriteRule ^(page|post|user|feed|search)$ %{REQUEST_URI}/ [R,L]
-RewriteRule ^feed/(post|page)$ %{REQUEST_URI}/ [R,L]
+RewriteRule ^(.*)$ index.php [L]
