Add .git to forbidden directories

--- a/.htaccess
+++ b/.htaccess
@@ -23,7 +23,7 @@ ErrorDocument 404 /404.php
 #===============================================================================
 # Forbidden directories
 #===============================================================================
-RewriteRule ^(core|theme/([^/]+)/(html|lang)/) - [F]
+RewriteRule ^(.git|core|theme/([^/]+)/(html|lang)/) - [F]
 
 #===============================================================================
 # Main rules
