Add trailing slash to forbidden directory rules

--- a/.htaccess
+++ b/.htaccess
@@ -27,7 +27,7 @@ RewriteEngine On
 #===============================================================================
 # Forbidden directories
 #===============================================================================
-RewriteRule ^(.git|core|theme/([^/]+)/(html|lang)/) - [F]
+RewriteRule ^(.git|core|theme/([^/]+)/(html|lang))/ - [F]
 
 #===============================================================================
 # Pass requests to index.php
