Server config: Add redirect option for static dir
Add option to redirect requests from the old to the new global static
directory in the server configuration files for Apache and nginx.

--- a/.htaccess
+++ b/.htaccess
@@ -41,3 +41,8 @@ RewriteRule ^(.git|core|theme/([^/]+)/(html|lang))/ - [F]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . index.php [L]
+
+#===============================================================================
+# Redirect from old to new global static dir
+#===============================================================================
+#Redirect 301 /rsrc/ /static/
